gd-Navi CSS min-width set to avoid hiding on small screens - FIXED

--- a/geodirectory-assets/css/style.scss
+++ b/geodirectory-assets/css/style.scss
@@ -450,6 +450,7 @@ ul.geodir-tabs-content li h3 {
 /* ########################################
 listings page 
 ######################################### */
+.gd-navi {min-width: 170px;}
 .geodir-tax-sort,
 .geodir-list-view-select {
     float: left;
